# 8a7ae46b7d1393b40f5ea014d7734e933d2064defb313683e7da179ec2cfd1b2_cancer_classification

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
models/: model.pkl
notebooks/: data_preprocessing.ipynb  evaluation.ipynb  feature_engineering.ipynb  model_training.ipynb
reports/: metrics.txt
src/: data_preprocessing.py  evaluation.py  feature_engineering.py  model_training.py  run_pipeline.py
